# fluix

./: Cargo.toml  bench.old
cmpint/: Cargo.toml
cmpint/benches/: vbyte.rs
cmpint/src/: lib.rs  stream_vbyte.rs  tests.rs  varint.rs  vbyte.rs
compacts/: Cargo.toml  build.rs
compacts/benches/: bit.rs  rrr.rs
compacts/src/: bit.rs  bit_set.rs  bits.rs  lib.rs  num.rs
compacts/src/bit/: array.rs  block.rs  map.rs  members.rs  ops.rs  rrr.rs  seq.rs  vec.rs
compacts/src/bit/block/: boxed_slice.rs
compacts/src/bit_set/: raw_vec.rs  tests.rs  word.rs
compacts/src/bit_set/mask/: and.rs  mod.rs  not.rs  or.rs  padding.rs  range.rs  xor.rs
compacts/src/bit_set/ops/: access.rs  insert.rs  mod.rs  rank.rs  remove.rs  select.rs
compacts/src/bits/: array.rs  index_map.rs  iter.rs  mask.rs  page.rs  raw_vec.rs  tests.rs  uint.rs
compacts/tests/: bit.rs  similarity.rs  union_find.rs
funnel/: Cargo.toml  README.md
funnel/benches/: signs.rs
funnel/src/: lib.rs
funnel/src/signs/: dump.rs  mod.rs
src/: funnel.rs  lib.rs
