[package]
name    = "funnel"
version = "0.1.0"
edition = "2018"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
readme  = "README.md"
license = "Apache-2.0/MIT"
repository  = "https://github.com/symplectik/fabric/funnel"
keywords    = []
categories  = ["data-structures"]
description = "filtering data"

[dependencies]
compacts = { version = "0.10", path = "../compacts" }

[dev-dependencies]
lazy_static = "1"
rand = "0.6"
